tests/baselines/reference/exportClassNameWithObjectAMD.errors.txt
tests/cases/conformance/externalModules/exportClassNameWithObjectAMD.ts(1,14): error TS2725: Class name cannot be 'Object' when targeting ES5 with module AMD.


==== tests/cases/conformance/externalModules/exportClassNameWithObjectAMD.ts (1 errors) ====
    export class Object {}
                 ~~~~~~
!!! error TS2725: Class name cannot be 'Object' when targeting ES5 with module AMD.
    